--- a/index.html
+++ b/index.html
@@ -7,5 +7,28 @@
   </head>
   <body>
 
+    <div>
+      <h1>Discover hidden places in the world around you</h1>
+      <p><a class="dlsoon" href="#">Download Excursion (Coming soon!)</a></p>
+      <video src="resources/videos/excursion.mp4" autoplay="muted loop" controls>iPhone mockup
+      </video>
+    </div>
+
+    <div>
+      <h2>Your personal travel guide</h2>
+      <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+      <img src="resources/images/camp.jpg" alt="tent on landscape at night">
+    </div>
+
+    <div>
+      <img class="app" src="resources/images/phone.png" alt="phone graphic">
+      <h2>Coming Soon for iPhone and Android</h2>
+      <p><a class="dlsoon" href="#">Download Excursion (Coming soon!)</a></p>
+    </div>
+
+    <div class="footer">
+      <p>&copy; Excursion</p>
+    </div>
+
   </body>
 </html>
