--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
 
     <div>
-      <img class="app" src="resources/images/phone.png" alt="phone graphic">
+      <img class="app" src="resources/images/phone.png" alt="phone graphic" Hspace="0" Vspace="30">
       <h2>Coming Soon for iPhone and Android</h2>
       <p><a class="dlsoon" href="#">Download Excursion (Coming soon!)</a></p>
     </div>
